# sysex-conf

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Makefile  README.md
.github/workflows/: ci.yml
include/lib/sysexconf/: common.h  sysexconf.h
scripts/: execute_tests.sh  gen_test_targets.sh  test_dir_get.sh
src/: Config.h  DataTypes.h  Makefile  SysEx.cpp  SysEx.h  SysExConf.cpp  SysExConf.h  sysexconf.cpp
src/tests/: GTest.mk  Makefile  Sources.mk  SysEx.h  gen_tests_targets.sh  runtests.sh
tests/: Defines.mk  Makefile  Sources.mk  SysEx.h  Tests.cpp  tests-all.cpp
tests/src/: CMakeLists.txt  SysEx.h  SysExTesting.h  tests.cpp
tests/src/all/: tests.cpp
tests/src/errorGet/: tests.cpp
tests/src/errorSet/: tests.cpp
tests/src/singleByte/sb_errorGet/: tests.cpp
tests/src/singleByte/sb_errorSet/: tests.cpp
tests/src/singleByte/sb_valid/: tests.cpp
tests/src/test/: CMakeLists.txt  test.cpp
tests/src/test_errorGet/: tests.cpp
tests/src/test_errorSet/: tests.cpp
tests/src/test_valid/: tests.cpp
tests/src/twoByte/tb_errorGet/: tests.cpp
tests/src/twoByte/tb_errorSet/: tests.cpp
tests/src/twoByte/tb_valid/: Makefile  tests.cpp
tests/src/valid/: tests.cpp
tests/unity/: Helpers.h  unity_config.h
